Several polishing touches, updated readme and copyright

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
       "name": "Mark Fisher",
       "email": "eldiddio@gmail.com",
       "url": "http://www.primarypad.com"
+    },
+    {
+      "name": "John McLear",
+      "email": "john@mclear.co.uk",
+      "url": "http://mclear.co.uk"
     }
   ],
   "dependacies": {},
