autofixes from Etherpad checkPlugins.js

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "dependacies": {},
   "engines": {
     "node": "*"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "http://etherpad.org/"
   }
 }
